crates/gwsim-data/tests/snapshots/data_tree__a_handler_name_is_checked_against_the_registry.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: problems.to_string()
---
skills/mesmer/energy-surge.ron:
  error: no handler is registered under the name `energy_surge`; registered handlers are panic, mistrust

1 error, 0 warnings in 1 file
