crates/gwsim-data/tests/snapshots/data_tree__a_missing_required_field.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  28:1 error: the field `campaign` is required but missing

1 error, 1 warning in 2 files
