crates/gwsim-data/tests/snapshots/data_tree__a_numbers_only_skill_with_an_encoding.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

encounters/curated/nightfall/vehtendi-valley/kournan-patrol.ron:
  warning: 1 of this encounter's foe skills are still NumbersOnly and will do nothing: energy-surge

skills/mesmer/energy-surge.ron:
  error: this skill is NumbersOnly but has an encoding; raise it to Draft, or remove the encoding

1 error, 2 warnings in 3 files
