crates/gwsim-data/tests/snapshots/data_tree__a_pve_only_skill_outside_the_common_folder.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  error: this skill is marked pve_only, so it belongs in skills/common/

1 error, 1 warning in 2 files
