crates/gwsim-data/tests/snapshots/data_tree__a_reviewed_skill_without_a_reviewer.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  error: provenance.review is Reviewed but reviewed_by is None: a review needs a reviewer

1 error, 1 warning in 2 files
