crates/gwsim-data/tests/snapshots/data_tree__a_skill_in_the_wrong_professions_folder.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/necromancer/energy-surge.ron:
  error: this is a Mesmer skill, so it belongs in skills/mesmer/, not skills/necromancer/

1 error, 1 warning in 2 files
