crates/gwsim-data/tests/snapshots/data_tree__a_variant_an_encounter_asks_for_but_the_foe_does_not_have.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

encounters/curated/nightfall/vehtendi-valley/kournan-patrol.ron:
  error: the foe `kournan-seer` has no variant named `axe`; that foe has no variants

1 error, 1 warning in 2 files
