crates/gwsim-data/tests/snapshots/data_tree__an_unknown_enum_variant.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  6:21 error: attribute: `Domination` is not one of the allowed values; did you mean `DominationMagic`?

1 error, 1 warning in 2 files
